# tsvc-runner

./: .gitmodules  Makefile  README.md  pyproject.toml  requirements.txt
tsvc_runner/: __main__.py
