[tool.poetry]
name = "tsvc-runner"
version = "0.1.0"
description = ""
authors = ["Ryang Sohn <loop.infinitely@gmail.com>"]
readme = "README.md"
packages = [{include = "tsvc_runner"}]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
